# WIP

collie/: BAKEOFF.md  CLAUDE.md  Cargo.toml  OPERATORS.md  PRINCIPLES.md  README.md
collie/dev/: 19_wco_surface_sketch.col  BACKLOG.md  FOLLOWUPS.md  LAYERING.md  ONBOARDING.md  SEGMENTED.md  SURFACE.md  SYSOP_KERNELS.md  VALUE_CONTRACT.md
collie/examples/: 01_reduce_sum.col  02_per_row_sum.col  (+19 more)
corgi/: .gitignore  Cargo.toml  NOTES.md  perf-gaps.md
corgi/benches/: eval.rs  gaps.rs  stride.rs
corgi/dev/: bytes-kickoff.md  numerics-kickoff.md  rust-surface-kickoff.md  strings-kickoff.md
corgi/examples/: tour.rs
corgi/programs/: 01-iota.col  02-reduce.col  03-map-arith.col  04-filter.col  05-sort.col  06-dedup.col  07-group.col  08-join.col  09-match.col  10-inject.col  11-classify.col  12-broadcast.col  12-cap-list.col  13-enlist.col  14-nested-reduce.col  15-law-maplist-squared.col  16-flatten.col  17-law-flatten-slices.col  18-branch.col  19-inject-list.col  20-sort-nested.col  21-group-stable.col  22-dedup-multirow.col  23-inject-unwrap.col  24-adt-counts.col  25-inject-find.col  26-pointer-jump.col  27-law-gather-compose.col  28-cse-round.col  29-law-head-enlist.col  30-law-cap-sum.col  31-law-slices-kernel.col  32-law-zip-transpose.col  33-law-unweave.col  33-law-weave-unweave.col  34-law-filter-kernel.col  35-word-count.col  36-csv-sum.col  37-index-total.col  37-scan.col  (+23 more)
corgi/src/: cmp.rs  effect.rs  engine.rs  find_search.rs  graph.rs  lengths.rs  lib.rs  optimize.rs  ranges.rs  shape.rs  total.rs  value.rs
corgi/src/frontend/: ml.rs  mod.rs  program.rs
corgi/src/ops/: cmp.rs  core.rs  mod.rs  numeric.rs  text.rs
corgi/src/ops/cmp/: order.rs
corgi/tests/: corpus.rs  effect.rs  kernel.rs  lengths.rs  ml.rs  numeric.rs  optimize.rs  ranges.rs  text.rs  total.rs  typer.rs
graphs/: Cargo.toml
graphs/src/: lib.rs  main.rs
graphs/src/computations/: connected.rs  mod.rs  neighborhoods.rs  pagerank.rs
ldbc_bi_25/: Cargo.toml
ldbc_bi_25/src/: main.rs
sudoku/: Cargo.toml
sudoku/src/: main.rs
(+44 files in other folders)
