[package]
name = "graphs"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

[dependencies]
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { path = "../../differential-dataflow" }
dogsdogsdogs = { path = "../../differential-dataflow/dogsdogsdogs" }
