[package]
name = "graphs"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

[dependencies]
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
dogsdogsdogs = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
graph_map = "0.1"
