[package]
name = "ldbc_bi_25"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

[dependencies]
differential-dataflow= { git = "https://github.com/TimelyDataflow/differential-dataflow" }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
rand = "0.6"
chrono = "0.4.6"